clusters/oracle/owncloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: owncloud
  labels:
    name: owncloud
