clusters/oracle/owncloud/collabora.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  namespace: owncloud
  labels:
    app: collabora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collabora
  template:
    metadata:
      labels:
        app: collabora
    spec:
      containers:
        - name: collabora
          image: collabora/code:latest
          ports:
            - containerPort: 9980
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: owncloud
spec:
  selector:
    app: collabora
  ports:
    - name: collabora
      protocol: TCP
      port: 80
      targetPort: 9980
