clusters/oracle/owncloud/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: owncloud
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: owncloud
spec:
  selector:
    app: mariadb
  ports:
    - name: mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
