clusters/oracle/owncloud/owncloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    app: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: files
              mountPath: /mnt/data
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "cloud"
spec:
  selector:
    app: owncloud
  ports:
    - name: owncloud
      protocol: TCP
      port: 80
      targetPort: 8080
