clusters/oracle/owncloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: owncloud
  namespace: owncloud
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "cloud.nkmrk.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: owncloud
          port: 80
